force-app/main/default/objects/OrderItem/fields/BillableUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>BillableUnitPrice__c</fullName>
    <label>Billable Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>