force-app/main/default/objects/OrderItem/fields/BilledTax__c.field-meta.xml
<CustomField>
    <fullName>BilledTax__c</fullName>
    <description>The sum of all taxes on invoices for this order product.</description>
    <inlineHelpText>The sum of all taxes on invoices for this order product.</inlineHelpText>
    <label>Billed Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>