force-app/main/default/objects/OrderItem/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <description>Created for Dynamic Billing / NS Integration project. Needed for One-Time Line items where the Start Date defaults to the Quote Start Date but that&apos;s not the official Billing Date. This value is populated by Quote Line value.</description>
    <inlineHelpText>When will this item be billed?</inlineHelpText>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>