force-app/main/default/objects/OrderItem/fields/BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency__c</fullName>
    <description>Defines the billing frequency.</description>
    <inlineHelpText>Defines the billing frequency.</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Frequency</valueSetName>
    </valueSet>
</CustomField>