force-app/main/default/objects/OrderItem/fields/BillingRule__c.field-meta.xml
<CustomField>
    <fullName>BillingRule__c</fullName>
    <description>Lookup to the Billing Rule assigned to this order product.</description>
    <inlineHelpText>Lookup to the Billing Rule assigned to this order product.</inlineHelpText>
    <label>Billing Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>