force-app/main/default/objects/OrderItem/fields/BillingTreatment__c.field-meta.xml
<CustomField>
    <fullName>BillingTreatment__c</fullName>
    <description>Lookup to the Billing Treatment assigned to this order product</description>
    <inlineHelpText>Lookup to the Billing Treatment assigned to this order product.</inlineHelpText>
    <label>Billing Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>