force-app/main/default/objects/OrderItem/fields/BillThroughDateOverride__c.field-meta.xml
<CustomField>
    <fullName>BillThroughDateOverride__c</fullName>
    <label>Bill Through Date Override</label>
    <type>Date</type>
</CustomField>