force-app/main/default/objects/OrderItem/fields/CanceledBillings__c.field-meta.xml
<CustomField>
    <fullName>CanceledBillings__c</fullName>
    <description>Total subtracted from the order product due to cancellation, swap, etc.</description>
    <inlineHelpText>Total subtracted from the order product due to cancellation, swap, etc.</inlineHelpText>
    <label>Canceled Billing Amount (without tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>