force-app/main/default/objects/OrderItem/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <description>The type of the product charge.</description>
    <inlineHelpText>The type of the product charge.</inlineHelpText>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Charge_Type</valueSetName>
    </valueSet>
</CustomField>