force-app/main/default/objects/OrderItem/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal flag used to kick off automatic asset and subscription conversion. Salesforce CPQ used this field to automatically convert assets and subscriptions.</description>
    <inlineHelpText>Has this Order Product been Contracted?</inlineHelpText>
    <label>Contracted</label>
    <type>Checkbox</type>
</CustomField>