force-app/main/default/objects/OrderItem/fields/etsuite_OrderItem_Id__c.field-meta.xml
<CustomField>
    <fullName>etsuite_OrderItem_Id__c</fullName>
    <label>etsuite OrderItem Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>