force-app/main/default/objects/OrderItem/fields/Hardware_Order__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Order__c</fullName>
    <description>Used in Flow to Populate Invoice Grouping</description>
    <formula>Order.Hardware_Order__c</formula>
    <inlineHelpText>Used in Flow to Populate Invoice Grouping
Help</inlineHelpText>
    <label>Hardware Order</label>
    <type>Checkbox</type>
</CustomField>