force-app/main/default/objects/OrderItem/fields/HoldBilling__c.field-meta.xml
<CustomField>
    <fullName>HoldBilling__c</fullName>
    <label>Hold Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HoldBilling</valueSetName>
    </valueSet>
</CustomField>