force-app/main/default/objects/OrderItem/fields/IncludedUsage__c.field-meta.xml
<CustomField>
    <fullName>IncludedUsage__c</fullName>
    <label>Included Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>