force-app/main/default/objects/OrderItem/fields/Integration_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Integration_Last_Updated__c</fullName>
    <label>Integration Last Updated</label>
    <type>Date</type>
</CustomField>