force-app/main/default/objects/OrderItem/fields/Invoice_Group__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Group__c</fullName>
    <label>Invoice Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>