force-app/main/default/objects/OrderItem/fields/InvoiceRunProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceRunProcessingStatus__c</fullName>
    <label>Invoice Run Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InvoiceRunProcessingStatus</valueSetName>
    </valueSet>
</CustomField>