force-app/main/default/objects/OrderItem/fields/InvoiceRunStartDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceRunStartDate__c</fullName>
    <label>Invoice Run Start Date</label>
    <type>Date</type>
</CustomField>