force-app/main/default/objects/OrderItem/fields/Legacy__c.field-meta.xml
<CustomField>
    <fullName>Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Record?</label>
    <type>Checkbox</type>
</CustomField>