force-app/main/default/objects/OrderItem/fields/LegacyRecognitionRule__c.field-meta.xml
<CustomField>
    <fullName>LegacyRecognitionRule__c</fullName>
    <description>Stores Old SF Org Recognition Rule from SF Billing App.</description>
    <inlineHelpText>Stores Old SF Org Recognition Rule from SF Billing App.</inlineHelpText>
    <label>Legacy Recognition Rule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>