force-app/main/default/objects/OrderItem/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <description>Migration ID created by Neocol to support 2023 NetSuite to Salesforce migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>Migration ID created by Neocol to support 2023 NetSuite to Salesforce migration.</inlineHelpText>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>