force-app/main/default/objects/OrderItem/fields/Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>Migration_Status__c</fullName>
    <description>Migration history tracking field created by Neocol to support 2023 NetSuite to Salesforce migration.</description>
    <inlineHelpText>Migration history tracking field created by Neocol to support 2023 NetSuite to Salesforce migration.</inlineHelpText>
    <label>Migration Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>