force-app/main/default/objects/OrderItem/fields/Netsuite_OrderItem_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_OrderItem_Id__c</fullName>
    <label>Netsuite OrderItem Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>