force-app/main/default/objects/OrderItem/fields/NetsuiteLink__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteLink__c</fullName>
    <label>Netsuite Link</label>
    <type>Url</type>
</CustomField>