force-app/main/default/objects/OrderItem/fields/Next_Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Charge_Date__c</fullName>
    <label>Next Charge Date</label>
    <type>Date</type>
</CustomField>