force-app/main/default/objects/OrderItem/fields/Old_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Id__c</fullName>
    <description>Stores the old SF Org&apos;s record Id for historical purposes.</description>
    <externalId>true</externalId>
    <inlineHelpText>What was the record id from the old SF Org?</inlineHelpText>
    <label>Old SF Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>