force-app/main/default/objects/OrderItem/fields/Order_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Description__c</fullName>
    <description>Created for Legacy TV Descriptions which were too long for line item description text field</description>
    <inlineHelpText>What is this Order Product being used for?</inlineHelpText>
    <label>Order Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>