force-app/main/default/objects/OrderItem/fields/OverrideBillableUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>OverrideBillableUnitPrice__c</fullName>
    <description>Use this field to manually override the calculated Billable Unit Price.</description>
    <inlineHelpText>Use this field to manually override the calculated Billable Unit Price.</inlineHelpText>
    <label>Override Billable Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>