force-app/main/default/objects/OrderItem/fields/Partner_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Partner_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if Product is Partner Subscription.</description>
    <inlineHelpText>Shows if Product is Partner Subscription.</inlineHelpText>
    <label>Partner Subscription</label>
    <type>Checkbox</type>
</CustomField>