force-app/main/default/objects/OrderItem/fields/PendingBillings__c.field-meta.xml
<CustomField>
    <fullName>PendingBillings__c</fullName>
    <description>Total remaining to be billed.</description>
    <inlineHelpText>Total remaining to be billed.</inlineHelpText>
    <label>Pending Billing Amount (without tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>