force-app/main/default/objects/OrderItem/fields/Recipient_City__c.field-meta.xml
<CustomField>
    <fullName>Recipient_City__c</fullName>
    <description>Turbine - Recipient City</description>
    <inlineHelpText>Turbine - Recipient City</inlineHelpText>
    <label>Recipient City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>