force-app/main/default/objects/OrderItem/fields/Recipient_Country__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Country__c</fullName>
    <description>Turbine - Recipient Country</description>
    <inlineHelpText>Turbine - Recipient Country</inlineHelpText>
    <label>Recipient Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>