force-app/main/default/objects/OrderItem/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Turbine - Recipient Name</description>
    <inlineHelpText>Turbine - Recipient Name</inlineHelpText>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>