force-app/main/default/objects/OrderItem/fields/Recipient_State__c.field-meta.xml
<CustomField>
    <fullName>Recipient_State__c</fullName>
    <description>Turbine - Recipient State</description>
    <inlineHelpText>Turbine - Recipient State</inlineHelpText>
    <label>Recipient State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>