force-app/main/default/objects/OrderItem/fields/Recipient_Street__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Street__c</fullName>
    <description>Turbine - Recipient Street</description>
    <inlineHelpText>Turbine - Recipient Street</inlineHelpText>
    <label>Recipient Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>