force-app/main/default/objects/OrderItem/fields/Recipient_Unit_or_Apt_Number__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Unit_or_Apt_Number__c</fullName>
    <description>Turbine - Recipient Unit or Apt. Number</description>
    <inlineHelpText>Turbine - Recipient Unit or Apt. Number</inlineHelpText>
    <label>Recipient Unit or Apt. Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>