force-app/main/default/objects/OrderItem/fields/Recipient_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Zip_Code__c</fullName>
    <description>Turbine - Recipient Zip Code</description>
    <inlineHelpText>Turbine - Recipient Zip Code</inlineHelpText>
    <label>Recipient Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>