force-app/main/default/objects/OrderItem/fields/TaxRule__c.field-meta.xml
<CustomField>
    <fullName>TaxRule__c</fullName>
    <description>Lookup to the Tax Rule assigned to this order product.</description>
    <inlineHelpText>Lookup to the Tax Rule assigned to this order product.</inlineHelpText>
    <label>Tax Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>