force-app/main/default/objects/OrderItem/fields/TotalBillings__c.field-meta.xml
<CustomField>
    <fullName>TotalBillings__c</fullName>
    <description>The sum of all invoice lines and taxes for this order.</description>
    <formula>BilledAmountwithouttax__c + BilledTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of all invoice lines and taxes for this order.</inlineHelpText>
    <label>Total Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>