force-app/main/default/objects/OrderItem/fields/Turbine_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Turbine_External_ID__c</fullName>
    <description>Turbine - Turbine External ID</description>
    <inlineHelpText>Turbine - Turbine External ID</inlineHelpText>
    <label>Turbine External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>