force-app/main/default/objects/OrderItem/fields/Usage_Floor_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Usage_Floor_Quantity__c</fullName>
    <label>Usage Floor Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>